Recommend separate dune-compiledb tool
Signed-off-by: Edwin Török <edwin.torok@cloud.com>

--- a/cmt/dune
+++ b/cmt/dune
@@ -1,5 +1,6 @@
 (executable
  (public_name lintcstubs_arity_cmt)
+ (package lintcstubs-arity)
  (libraries primitives_of_cmt)
  (enabled_if
   (>= %{ocaml_version} 4.10)))
