Backport to dune 2.7, drop OCaml 4.08 support
Dune 2.7 doesn't support `enabled_if` in `with-stdout-to` rules,
and between supporting OCaml 4.08 or supporting Dune 2.x, the latter is
more useful.

Signed-off-by: Edwin Török <edwin.torok@cloud.com>

--- a/cmt/dune
+++ b/cmt/dune
@@ -1,20 +1,14 @@
 (executable
  (public_name lintcstubs_arity_cmt)
  (package lintcstubs-arity)
- (libraries primitives_of_cmt)
- (enabled_if
-  (>= %{ocaml_version} 4.10)))
+ (libraries primitives_of_cmt))
 
 (cram
- (deps %{bin:lintcstubs_arity_cmt})
- (enabled_if
-  (>= %{ocaml_version} 4.10)))
+ (deps %{bin:lintcstubs_arity_cmt}))
 
 (rule
  (alias runtest)
  (enabled_if
-  (and
-   (>= %{ocaml_version} 4.10)
-   (= %{system} linux)))
+  (= %{system} linux))
  (action
   (run ./test.sh %{bin:lintcstubs_arity_cmt})))
